Fix workgroup item count error

--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/helpers/paginated_workgroup_list.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/helpers/paginated_workgroup_list.html
@@ -61,7 +61,7 @@ Showing {{ page.paginator.count }} results.
         </td>
         <td>{{ item.definition|striptags|safe|truncatewords:50 }}</td>
         <td>{{ item|distinct_members_count }}</td>
-        <td>{{ item.items__count }}</td>
+        <td>{{ item.num_items }}</td>
         {% if show_all %}
         <td>
             {% if item.archived %}
