--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/managedContent.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/managedContent.html
@@ -67,7 +67,26 @@
             {% extra_content extension item request.user %}
         {% endfor %}
     </div>
-</div>
+
+  <!-- Modal -->
+  <div class="modal fade exclude-scrap" id="TagEditorModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel">Tag Editor</h4>
+        </div>
+        <div class="modal-body">
+          <p>Edit ya damn tags</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
 
 </section>
 {% endblock %}
