--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/helpers/favourite_concept.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/helpers/favourite_concept.html
@@ -1,9 +1,17 @@
 {% load aristotle_tags i18n %}
-<a class="btn btn-default favourite" href="{% url 'aristotle:toggleFavourite' item.id %}"
-    title="{% ternary isFavourite 'Remove from my favourite items' 'Add to my favourite items' %}">
-    {% if isFavourite %}
-        <i class="fa fa-bookmark "></i>
-    {% else %}
-        <i class="fa fa-bookmark-o "></i>
-    {% endif %}
-</a>
+<div class="btn-group">
+  <a class="btn btn-default dropdown-toggle favourite" {# href="{% url 'aristotle:toggleFavourite' item.id %}" #}
+      title="{% ternary isFavourite 'Remove from my favourite items' 'Add to my favourite items' %}"
+      data-toggle="dropdown">
+      {% if isFavourite %}
+          <i class="fa fa-bookmark "></i>
+      {% else %}
+          <i class="fa fa-bookmark-o "></i>
+      {% endif %}
+      <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu">
+    <li><a href="#" data-toggle="modal" data-target="#TagEditorModal">Tag Editor</a></li>
+    <li><a href="#">Remove Favourite</a></li>
+  </ul>
+</div>
