--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/helpers/favourite_concept.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/helpers/favourite_concept.html
@@ -1,6 +1,6 @@
 {% load aristotle_tags i18n %}
-<a class="btn btn-default favourite" {# href="{% url 'aristotle:toggleFavourite' item.id %}" #}
-                                        title="{% ternary isFavourite 'Remove from my favourite items' 'Add to my favourite items' %}">
+<a class="btn btn-default favourite" href="{% url 'aristotle_favourites:toggleFavourite' item.id %}"
+   title="{% ternary isFavourite 'Remove from my favourite items' 'Add to my favourite items' %}">
     {% if isFavourite %}
         <i class="fa fa-bookmark "></i>
     {% else %}
