Made tag input not on new line

--- a/python/aristotle-metadata-registry/aristotle_mdr/static/aristotle_mdr/taggle.css
+++ b/python/aristotle-metadata-registry/aristotle_mdr/static/aristotle_mdr/taggle.css
@@ -1,3 +1,7 @@
+.modal-body {
+  overflow: auto
+}
+
 .taggle_textarea {
   width: 100%;
   /* border: 1px solid black; */
@@ -9,6 +13,7 @@
   margin: 0;
   width: 100%;
   border: 1px solid black;
+  box-sizing: content-box;
 }
 
 .taggle_input {
