--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/managedContent.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/managedContent.html
@@ -78,7 +78,7 @@
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           <div class="modal-title h4" id="TagEditor">Tag Editor</div>
         </div>
-        <div class="modal-body" style="overflow:auto">
+        <div class="modal-body">
           <p>Step right up, all your tag needs here</p>
           <div id="taggle-editor" class="input taggle_textarea"></div>
         </div>
