--- a/python/aristotle-metadata-registry/aristotle_mdr/static/aristotle_mdr/taggle.css
+++ b/python/aristotle-metadata-registry/aristotle_mdr/static/aristotle_mdr/taggle.css
@@ -4,7 +4,11 @@
 
 .taggle_textarea {
   width: 100%;
-  /* border: 1px solid black; */
+  height: auto;
+}
+
+.taggle {
+  color: #3E6D8E;
 }
 
 .taggle_list {
@@ -12,8 +16,8 @@
   padding: 3px;
   margin: 0;
   width: 100%;
-  border: 1px solid black;
   box-sizing: content-box;
+  border: 1px solid #ccc;
 }
 
 .taggle_input {
@@ -32,11 +36,12 @@
 }
 
 .taggle_list .taggle {
+  font-weight: 200;
   margin-right: 8px;
-  background: #E2E1DF;
+  background-color: #E0EAF1;
   padding: 5px 10px;
   padding-right: 15px;
-  border-radius: 3px;
+  border-radius: 0;
   position: relative;
   cursor: pointer;
   transition: all .3s;
@@ -47,25 +52,31 @@
 }
 
 .taggle_list .taggle_hot {
-  background: #cac8c4;
+  background: #BDD0DD;
 }
 
 .taggle_list .taggle .close {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   position: absolute;
-  top: 10px;
+  top: 3px;
   right: 3px;
   text-decoration: none;
   padding: 0;
-  line-height: 0.5;
-  color: #ccc;
-  color: rgba(0, 0, 0, 0.2);
-  padding-bottom: 4px;
+  line-height: .1rem;
+  color: #aaa;
   border: 0;
   background: none;
   cursor: pointer;
   display: block;
-  color: #990033;
+  border-radius: 1.3rem;
+  width: 1.3rem;
+  height: 1.3rem;
+  opacity: unset;
+}
+
+.taggle_list .taggle .close:hover {
+  background: #C03434;
+  color: #fff;
 }
 
 .taggle_placeholder {
