--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/managedContent.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/managedContent.html
@@ -10,11 +10,11 @@
     {% endif %}
     <link rel="stylesheet" type="text/css" href="{% static 'aristotle_mdr/aristotle.visuals.less'|compile %}" />
     <script src="https://cdn.jsdelivr.net/npm/taggle@1.14.0/src/taggle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.min.js"></script>
     <script>
       var edit_tag_url="{% url 'aristotle_favourites:edit_tags' item.id %}"
     </script>
     {{ tags|json_script:"tags-json" }}
-    <script src="{% static 'aristotle_mdr/itemPage.js' %}"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'aristotle_mdr/taggle.css' %}" />
 {% endblock %}
 
@@ -33,67 +33,70 @@
     {% include "aristotle_mdr/concepts/actionbar.html" %}
 </header>
 <section class="managed row">
-    {% include "aristotle_mdr/concepts/infobox.html" %}
-    {% include "aristotle_mdr/concepts/visibilityInfoBar.html" %}
+    <div id="vue-managed-content">
+      {% include "aristotle_mdr/concepts/infobox.html" %}
+      {% include "aristotle_mdr/concepts/visibilityInfoBar.html" %}
 
-    <h2 title="{% doc item 'definition' %}">{% trans 'Definition'%}</h2>
-    <div id="definition" class="definition">
-        {{ item.definition | safe}}
-    </div>
+      <h2 title="{% doc item 'definition' %}">{% trans 'Definition'%}</h2>
+      <div id="definition" class="definition">
+          {{ item.definition | safe}}
+      </div>
 
-    {% block objSpecific %}{% endblock %}
+      {% block objSpecific %}{% endblock %}
 
-    {% if item.comments %}
-        <h2>Comments</h2>
-        {{ item.comments | safe }}
-    {% endif %}
+      {% if item.comments %}
+          <h2>Comments</h2>
+          {{ item.comments | safe }}
+      {% endif %}
 
-    {% if item.references %}
-    <div>
-    <h2>References</h2>
-        <p>{{ item.references | safe }}</p>
-        {% if item.submitting_organisation %}
-        <h3>Submitting Organisation</h3>
-            <p>{{ item.submitting_organisation }}</p>
-        {% endif %}
-        {% if item.responsible_organisation %}
-        <h3>Responsible Organisation</h3>
-            <p>{{ item.responsible_organisation }}</p>
-        {% endif %}
-    </div>
-    {% endif %}
-    {% if 'aristotle_mdr.contrib.slots'|is_active_module %}
-        {% include "aristotle_mdr/slots/slots_display.html" %}
-    {% endif %}
-    {% if 'aristotle_mdr.contrib.links'|is_active_module %}
-        {% include "aristotle_mdr/links/links_display.html" %}
-    {% endif %}
-    <h2>Related content</h2>
-        {% block relationships %}{% endblock %}
-        {% for extension in config.CONTENT_EXTENSIONS %}
-            {% extra_content extension item request.user %}
-        {% endfor %}
-    </div>
+      {% if item.references %}
+      <div>
+      <h2>References</h2>
+          <p>{{ item.references | safe }}</p>
+          {% if item.submitting_organisation %}
+          <h3>Submitting Organisation</h3>
+              <p>{{ item.submitting_organisation }}</p>
+          {% endif %}
+          {% if item.responsible_organisation %}
+          <h3>Responsible Organisation</h3>
+              <p>{{ item.responsible_organisation }}</p>
+          {% endif %}
+      </div>
+      {% endif %}
+      {% if 'aristotle_mdr.contrib.slots'|is_active_module %}
+          {% include "aristotle_mdr/slots/slots_display.html" %}
+      {% endif %}
+      {% if 'aristotle_mdr.contrib.links'|is_active_module %}
+          {% include "aristotle_mdr/links/links_display.html" %}
+      {% endif %}
+      <h2>Related content</h2>
+          {% block relationships %}{% endblock %}
+          {% for extension in config.CONTENT_EXTENSIONS %}
+              {% extra_content extension item request.user %}
+          {% endfor %}
 
-  <div class="modal fade exclude-scrap" id="TagEditorModal" tabindex="-1" role="dialog" aria-labelledby="TagEditor">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <div class="modal-title h4" id="TagEditor">Tag Editor</div>
-        </div>
-        <div class="modal-body">
-          <p>Step right up, all your tag needs here</p>
-          <div id="taggle-editor" class="input taggle_textarea"></div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button id="tag-editor-submit" type="button" class="btn btn-primary">Save changes</button>
+      <div class="modal fade exclude-scrap" id="TagEditorModal" tabindex="-1" role="dialog" aria-labelledby="TagEditor">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <div class="modal-title h4" id="TagEditor">Tag Editor</div>
+            </div>
+            <div class="modal-body">
+              <p>Step right up, all your tag needs here</p>
+              <taggle-tags v-model="tags"></taggle-tags>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              <button id="tag-editor-submit" type="button" class="btn btn-primary">Save changes</button>
+            </div>
+
+          </div>
         </div>
       </div>
-    </div>
-  </div>
-  </div>
 
+    </div>
 </section>
+<script src="{% static 'aristotle_mdr/itemPage.js' %}"></script>
 {% endblock %}
