Add v-cloaks, update tags only on save

--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/infobox.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/infobox.html
@@ -146,7 +146,7 @@
             <dt>Tags</dt>
             <dd>
               <ul>
-                <li v-for="tag in tags">{{ tag }}</li>
+                <li v-for="tag in saved_tags">{{ tag }}</li>
               </ul>
             </dd>
           </div>
