--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/helpers/favourite_concept.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/helpers/favourite_concept.html
@@ -7,7 +7,7 @@
         <i class="fa fa-bookmark-o "></i>
     {% endif %}
 </a>
-<a class="btn btn-default" data-toggle="modal" data-target="#TagEditorModal">
+<a class="btn btn-default" data-toggle="modal" data-target="#TagEditorModal" v-cloak>
   <i class="fa fa-tag" aria-hidden="true"></i>
   Tag
 </a>
