--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/managedContent.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/managedContent.html
@@ -85,7 +85,7 @@
             </div>
             <div class="modal-body">
               <p>Step right up, all your tag needs here</p>
-              <taggle-tags v-model="tags"></taggle-tags>
+              <taggle-tags :initial="saved_tags" @submit="submit_tags"></taggle-tags>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
