--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/infobox.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/infobox.html
@@ -143,10 +143,11 @@
         {% endif %}
           {% verbatim %}
           <div class="vue-tags" v-cloak>
+            <hr>
             <dt>Tags</dt>
             <dd>
-              <ul>
-                <li v-for="tag in saved_tags">{{ tag }}</li>
+              <ul class="taggle_list">
+                <li class="taggle" v-for="tag in saved_tags">{{ tag }}</li>
               </ul>
             </dd>
           </div>
