--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/generic/templates/aristotle_mdr/generic/actions/alter_one_to_many.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/generic/templates/aristotle_mdr/generic/actions/alter_one_to_many.html
@@ -39,6 +39,7 @@
     {% csrf_token %}
     {{ formset.management_form }}
     {{ formset.non_form_errors.as_ul }}
+    {{ formset.errors.as_ul }}
     <div>
     {% include 'aristotle_mdr/generic/actions/alter_one_to_many_formset.html' with formset=formset %}
     </div>
