--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/actionbar.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/actionbar.html
@@ -5,7 +5,8 @@
         {% include "aristotle_mdr/helpers/favourite_concept.html" %}
     {% endif %}
     {% include "aristotle_mdr/helpers/extra_actions.html" %}
-    {% if user.is_active or item|can_edit:request.user %}
+
+    {% if user.is_active %}
     <div class="btn-group">
       <button id="metadata_action_menu_action" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
         <i class="fa fa-fw fa-pencil-square-o"></i> {% trans 'Actions'%} <span class="caret"></span>
@@ -17,7 +18,6 @@
             <i class="fa fa-fw fa-pencil-square-o"></i> {% trans 'Open item editor'%}
         </a></li>
         {% endif %}
-        {% if user.is_active %}
         <li><a class="" href="{% url 'aristotle:clone_item' item.id %}">
             <i class="fa fa-fw fa-code-fork"></i> {% trans 'Clone this item'%}
         </a></li>
@@ -28,15 +28,19 @@
         <li><a class="" href="{% url 'aristotle:request_review' item.id %}" data-toggle="modal" data-target="#infobox_adv_edit">
             <i class="fa fa-fw fa-flag"></i> {% trans 'Submit for review'%}
         </a></li>
+
+        {% if item|can_change_status:request.user %}
         <li><a class="" href="{% url 'aristotle:changeStatus' item.id %}" data-toggle="modal" data-target="#infobox_adv_edit">
             <i class="fa fa-fw fa-university"></i> {% trans 'Change registration status'%}
         </a></li>
-        {% comment %}
-        <li><a class="" href="{% url 'aristotle:clone_item' item.id %}">
-            <i class="fa fa-fw fa-flag-checkered"></i> {% trans 'View review history'%}
-        </a></li>
-        {% endcomment %}
         {% endif %}
+
+        {% if item|can_supersede:request.user %}
+        <li><a class="" href="{% url 'aristotle:supersede' item.id %}">
+            <i class="fa fa-fw fa-fast-forward"></i> {% trans 'Supersede item'%}
+        </a></li>
+        {% endif %}
+
         {% if item.registry_cascade_items %}
         <li><a class="" href="{% url 'aristotle:check_cascaded_states' item.id %}" data-toggle="modal" data-target="#infobox_adv_edit">
             <i class="fa fa-fw fa-sitemap"></i> {% trans 'Check component states'%}
