Tag view, paginated favourites updates

--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/favourites/templates/aristotle_mdr/favourites/ba_paginated_favourite_list.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/favourites/templates/aristotle_mdr/favourites/ba_paginated_favourite_list.html
@@ -24,7 +24,7 @@
           <td>
             <ul class="taggle_list">
               {% for tag in item.tags %}
-                <li class="taggle">{{ tag }}</li>  
+                <li class="taggle">{{ tag.name }}</li>  
               {% endfor %}
             </ul>
           </td>
