Favourites and tags page, favourites only page

--- a/python/aristotle-metadata-registry/aristotle_mdr/static/aristotle_mdr/taggle.css
+++ b/python/aristotle-metadata-registry/aristotle_mdr/static/aristotle_mdr/taggle.css
@@ -53,6 +53,10 @@
   color: white !important;
 }
 
+.taggle_list .taggle_postit {
+  background-color: gold !important;
+}
+
 .taggle_list .taggle_hot {
   background: #BDD0DD;
 }
