--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/favourites/templates/aristotle_mdr/favourites/tags.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/favourites/templates/aristotle_mdr/favourites/tags.html
@@ -1,8 +1,8 @@
 {% extends "aristotle_mdr/user/userHome.html" %}
 {% load aristotle_tags i18n static %}
 
-{% block title %}My Favourites{% endblock %}
-{% block collapse-link%}<i class="fa fa-bookmark fa-fw"></i> My Favourites</a>{% endblock %}
+{% block title %}{{ title }}{% endblock %}
+{% block collapse-link%}<i class="fa fa-bookmark fa-fw"></i> {{ title }}</a>{% endblock %}
 {% block sidebar %}
     {% include "aristotle_mdr/user/userSideBar.html" with activeTab='favourites' %}
 {% endblock %}
@@ -13,7 +13,12 @@
 {% endblock %}
 
 {% block page %}
-  <h1><a href="#"><i class="fa fa-bookmark fa-fw"></i> My Tag</a></h1>
+  <h1>
+    <a href="#">
+      <i class="fa fa-bookmark fa-fw"></i>
+      {{ title }}
+    </a>
+  </h1>
   {% if page_obj %}
     {% include 'aristotle_mdr/favourites/ba_paginated_favourite_list.html' with page_obj=page_obj tags_list=False %}
   {% endif %}
